parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    BOOL
    COMMENT_MULTI
    COMMENT_SINGLE
    NEWLINE
    NOT

Grammar

Rule 0     S' -> code
Rule 1     code -> empty
Rule 2     code -> statement
Rule 3     code -> statement SEMI_COLON code
Rule 4     statement -> assignment
Rule 5     statement -> binaryexp
Rule 6     assignment -> definition EQUAL binaryexp
Rule 7     assignment -> identifier EQUAL binaryexp
Rule 8     definition -> PRIVATE PRIVATE_ID
Rule 9     binaryexp -> binaryexp operator binaryexp
Rule 10    binaryexp -> primaryexp
Rule 11    primaryexp -> number
Rule 12    primaryexp -> unaryexp
Rule 13    primaryexp -> nularexp
Rule 14    primaryexp -> variable
Rule 15    primaryexp -> string
Rule 16    primaryexp -> LBRACE code RBRACE
Rule 17    primaryexp -> LPAREN binaryexp RPAREN
Rule 18    primaryexp -> array
Rule 19    array -> LSPAREN RSPAREN
Rule 20    array -> LSPAREN arrayelement RSPAREN
Rule 21    arrayelement -> binaryexp
Rule 22    arrayelement -> binaryexp COMMA arrayelement
Rule 23    nularexp -> operator
Rule 24    unaryexp -> PLUS primaryexp
Rule 25    unaryexp -> MINUS primaryexp
Rule 26    unaryexp -> identifier primaryexp
Rule 27    variable -> identifier
Rule 28    operator -> identifier
Rule 29    operator -> punctuation
Rule 30    punctuation -> PLUS
Rule 31    punctuation -> MINUS
Rule 32    punctuation -> TIMES
Rule 33    punctuation -> DIVIDE
Rule 34    punctuation -> MOD
Rule 35    punctuation -> POW
Rule 36    punctuation -> SELECT
Rule 37    punctuation -> COLON
Rule 38    punctuation -> comparisonoperator
Rule 39    punctuation -> AND
Rule 40    punctuation -> OR
Rule 41    punctuation -> configaccessor
Rule 42    comparisonoperator -> LT
Rule 43    comparisonoperator -> GT
Rule 44    comparisonoperator -> LTE
Rule 45    comparisonoperator -> GTE
Rule 46    comparisonoperator -> EQUALITY
Rule 47    comparisonoperator -> INEQUALITY
Rule 48    configaccessor -> GT GT
Rule 49    configaccessor -> DIVIDE
Rule 50    identifier -> PRIVATE_ID
Rule 51    identifier -> GLOBAL_ID
Rule 52    number -> NUMBER_REAL
Rule 53    number -> NUMBER_EXP
Rule 54    number -> NUMBER_HEX
Rule 55    string -> STRING_SINGLE
Rule 56    string -> STRING_DOUBLE
Rule 57    empty -> <empty>

Terminals, with rules where they appear

AND                  : 39
BOOL                 : 
COLON                : 37
COMMA                : 22
COMMENT_MULTI        : 
COMMENT_SINGLE       : 
DIVIDE               : 33 49
EQUAL                : 6 7
EQUALITY             : 46
GLOBAL_ID            : 51
GT                   : 43 48 48
GTE                  : 45
INEQUALITY           : 47
LBRACE               : 16
LPAREN               : 17
LSPAREN              : 19 20
LT                   : 42
LTE                  : 44
MINUS                : 25 31
MOD                  : 34
NEWLINE              : 
NOT                  : 
NUMBER_EXP           : 53
NUMBER_HEX           : 54
NUMBER_REAL          : 52
OR                   : 40
PLUS                 : 24 30
POW                  : 35
PRIVATE              : 8
PRIVATE_ID           : 8 50
RBRACE               : 16
RPAREN               : 17
RSPAREN              : 19 20
SELECT               : 36
SEMI_COLON           : 3
STRING_DOUBLE        : 56
STRING_SINGLE        : 55
TIMES                : 32
error                : 

Nonterminals, with rules where they appear

array                : 18
arrayelement         : 20 22
assignment           : 4
binaryexp            : 5 6 7 9 9 17 21 22
code                 : 3 16 0
comparisonoperator   : 38
configaccessor       : 41
definition           : 6
empty                : 1
identifier           : 7 26 27 28
nularexp             : 13
number               : 11
operator             : 9 23
primaryexp           : 10 24 25 26
punctuation          : 29
statement            : 2 3
string               : 15
unaryexp             : 12
variable             : 14

Parsing method: LALR

state 0

    (0) S' -> . code
    (1) code -> . empty
    (2) code -> . statement
    (3) code -> . statement SEMI_COLON code
    (57) empty -> .
    (4) statement -> . assignment
    (5) statement -> . binaryexp
    (6) assignment -> . definition EQUAL binaryexp
    (7) assignment -> . identifier EQUAL binaryexp
    (9) binaryexp -> . binaryexp operator binaryexp
    (10) binaryexp -> . primaryexp
    (8) definition -> . PRIVATE PRIVATE_ID
    (50) identifier -> . PRIVATE_ID
    (51) identifier -> . GLOBAL_ID
    (11) primaryexp -> . number
    (12) primaryexp -> . unaryexp
    (13) primaryexp -> . nularexp
    (14) primaryexp -> . variable
    (15) primaryexp -> . string
    (16) primaryexp -> . LBRACE code RBRACE
    (17) primaryexp -> . LPAREN binaryexp RPAREN
    (18) primaryexp -> . array
    (52) number -> . NUMBER_REAL
    (53) number -> . NUMBER_EXP
    (54) number -> . NUMBER_HEX
    (24) unaryexp -> . PLUS primaryexp
    (25) unaryexp -> . MINUS primaryexp
    (26) unaryexp -> . identifier primaryexp
    (23) nularexp -> . operator
    (27) variable -> . identifier
    (55) string -> . STRING_SINGLE
    (56) string -> . STRING_DOUBLE
    (19) array -> . LSPAREN RSPAREN
    (20) array -> . LSPAREN arrayelement RSPAREN
    (28) operator -> . identifier
    (29) operator -> . punctuation
    (30) punctuation -> . PLUS
    (31) punctuation -> . MINUS
    (32) punctuation -> . TIMES
    (33) punctuation -> . DIVIDE
    (34) punctuation -> . MOD
    (35) punctuation -> . POW
    (36) punctuation -> . SELECT
    (37) punctuation -> . COLON
    (38) punctuation -> . comparisonoperator
    (39) punctuation -> . AND
    (40) punctuation -> . OR
    (41) punctuation -> . configaccessor
    (42) comparisonoperator -> . LT
    (43) comparisonoperator -> . GT
    (44) comparisonoperator -> . LTE
    (45) comparisonoperator -> . GTE
    (46) comparisonoperator -> . EQUALITY
    (47) comparisonoperator -> . INEQUALITY
    (48) configaccessor -> . GT GT
    (49) configaccessor -> . DIVIDE

    $end            reduce using rule 57 (empty -> .)
    PRIVATE         shift and go to state 10
    PRIVATE_ID      shift and go to state 11
    GLOBAL_ID       shift and go to state 12
    LBRACE          shift and go to state 18
    LPAREN          shift and go to state 19
    NUMBER_REAL     shift and go to state 21
    NUMBER_EXP      shift and go to state 22
    NUMBER_HEX      shift and go to state 23
    PLUS            shift and go to state 24
    MINUS           shift and go to state 25
    STRING_SINGLE   shift and go to state 26
    STRING_DOUBLE   shift and go to state 27
    LSPAREN         shift and go to state 28
    TIMES           shift and go to state 30
    DIVIDE          shift and go to state 31
    MOD             shift and go to state 32
    POW             shift and go to state 33
    SELECT          shift and go to state 34
    COLON           shift and go to state 35
    AND             shift and go to state 37
    OR              shift and go to state 38
    LT              shift and go to state 40
    GT              shift and go to state 41
    LTE             shift and go to state 42
    GTE             shift and go to state 43
    EQUALITY        shift and go to state 44
    INEQUALITY      shift and go to state 45

    code                           shift and go to state 1
    empty                          shift and go to state 2
    statement                      shift and go to state 3
    assignment                     shift and go to state 4
    binaryexp                      shift and go to state 5
    definition                     shift and go to state 6
    identifier                     shift and go to state 7
    operator                       shift and go to state 8
    primaryexp                     shift and go to state 9
    number                         shift and go to state 13
    unaryexp                       shift and go to state 14
    nularexp                       shift and go to state 15
    variable                       shift and go to state 16
    string                         shift and go to state 17
    array                          shift and go to state 20
    punctuation                    shift and go to state 29
    comparisonoperator             shift and go to state 36
    configaccessor                 shift and go to state 39

state 1

    (0) S' -> code .



state 2

    (1) code -> empty .

    $end            reduce using rule 1 (code -> empty .)
    RBRACE          reduce using rule 1 (code -> empty .)


state 3

    (2) code -> statement .
    (3) code -> statement . SEMI_COLON code

    $end            reduce using rule 2 (code -> statement .)
    RBRACE          reduce using rule 2 (code -> statement .)
    SEMI_COLON      shift and go to state 46


state 4

    (4) statement -> assignment .

    SEMI_COLON      reduce using rule 4 (statement -> assignment .)
    $end            reduce using rule 4 (statement -> assignment .)
    RBRACE          reduce using rule 4 (statement -> assignment .)


state 5

    (5) statement -> binaryexp .
    (9) binaryexp -> binaryexp . operator binaryexp
    (28) operator -> . identifier
    (29) operator -> . punctuation
    (50) identifier -> . PRIVATE_ID
    (51) identifier -> . GLOBAL_ID
    (30) punctuation -> . PLUS
    (31) punctuation -> . MINUS
    (32) punctuation -> . TIMES
    (33) punctuation -> . DIVIDE
    (34) punctuation -> . MOD
    (35) punctuation -> . POW
    (36) punctuation -> . SELECT
    (37) punctuation -> . COLON
    (38) punctuation -> . comparisonoperator
    (39) punctuation -> . AND
    (40) punctuation -> . OR
    (41) punctuation -> . configaccessor
    (42) comparisonoperator -> . LT
    (43) comparisonoperator -> . GT
    (44) comparisonoperator -> . LTE
    (45) comparisonoperator -> . GTE
    (46) comparisonoperator -> . EQUALITY
    (47) comparisonoperator -> . INEQUALITY
    (48) configaccessor -> . GT GT
    (49) configaccessor -> . DIVIDE

    SEMI_COLON      reduce using rule 5 (statement -> binaryexp .)
    $end            reduce using rule 5 (statement -> binaryexp .)
    RBRACE          reduce using rule 5 (statement -> binaryexp .)
    PRIVATE_ID      shift and go to state 11
    GLOBAL_ID       shift and go to state 12
    PLUS            shift and go to state 49
    MINUS           shift and go to state 50
    TIMES           shift and go to state 30
    DIVIDE          shift and go to state 31
    MOD             shift and go to state 32
    POW             shift and go to state 33
    SELECT          shift and go to state 34
    COLON           shift and go to state 35
    AND             shift and go to state 37
    OR              shift and go to state 38
    LT              shift and go to state 40
    GT              shift and go to state 41
    LTE             shift and go to state 42
    GTE             shift and go to state 43
    EQUALITY        shift and go to state 44
    INEQUALITY      shift and go to state 45

    operator                       shift and go to state 47
    identifier                     shift and go to state 48
    punctuation                    shift and go to state 29
    comparisonoperator             shift and go to state 36
    configaccessor                 shift and go to state 39

state 6

    (6) assignment -> definition . EQUAL binaryexp

    EQUAL           shift and go to state 51


state 7

    (7) assignment -> identifier . EQUAL binaryexp
    (26) unaryexp -> identifier . primaryexp
    (27) variable -> identifier .
    (28) operator -> identifier .
    (11) primaryexp -> . number
    (12) primaryexp -> . unaryexp
    (13) primaryexp -> . nularexp
    (14) primaryexp -> . variable
    (15) primaryexp -> . string
    (16) primaryexp -> . LBRACE code RBRACE
    (17) primaryexp -> . LPAREN binaryexp RPAREN
    (18) primaryexp -> . array
    (52) number -> . NUMBER_REAL
    (53) number -> . NUMBER_EXP
    (54) number -> . NUMBER_HEX
    (24) unaryexp -> . PLUS primaryexp
    (25) unaryexp -> . MINUS primaryexp
    (26) unaryexp -> . identifier primaryexp
    (23) nularexp -> . operator
    (27) variable -> . identifier
    (55) string -> . STRING_SINGLE
    (56) string -> . STRING_DOUBLE
    (19) array -> . LSPAREN RSPAREN
    (20) array -> . LSPAREN arrayelement RSPAREN
    (50) identifier -> . PRIVATE_ID
    (51) identifier -> . GLOBAL_ID
    (28) operator -> . identifier
    (29) operator -> . punctuation
    (30) punctuation -> . PLUS
    (31) punctuation -> . MINUS
    (32) punctuation -> . TIMES
    (33) punctuation -> . DIVIDE
    (34) punctuation -> . MOD
    (35) punctuation -> . POW
    (36) punctuation -> . SELECT
    (37) punctuation -> . COLON
    (38) punctuation -> . comparisonoperator
    (39) punctuation -> . AND
    (40) punctuation -> . OR
    (41) punctuation -> . configaccessor
    (42) comparisonoperator -> . LT
    (43) comparisonoperator -> . GT
    (44) comparisonoperator -> . LTE
    (45) comparisonoperator -> . GTE
    (46) comparisonoperator -> . EQUALITY
    (47) comparisonoperator -> . INEQUALITY
    (48) configaccessor -> . GT GT
    (49) configaccessor -> . DIVIDE

  ! reduce/reduce conflict for PRIVATE_ID resolved using rule 27 (variable -> identifier .)
  ! reduce/reduce conflict for GLOBAL_ID resolved using rule 27 (variable -> identifier .)
  ! reduce/reduce conflict for PLUS resolved using rule 27 (variable -> identifier .)
  ! reduce/reduce conflict for MINUS resolved using rule 27 (variable -> identifier .)
  ! reduce/reduce conflict for TIMES resolved using rule 27 (variable -> identifier .)
  ! reduce/reduce conflict for DIVIDE resolved using rule 27 (variable -> identifier .)
  ! reduce/reduce conflict for MOD resolved using rule 27 (variable -> identifier .)
  ! reduce/reduce conflict for POW resolved using rule 27 (variable -> identifier .)
  ! reduce/reduce conflict for SELECT resolved using rule 27 (variable -> identifier .)
  ! reduce/reduce conflict for COLON resolved using rule 27 (variable -> identifier .)
  ! reduce/reduce conflict for AND resolved using rule 27 (variable -> identifier .)
  ! reduce/reduce conflict for OR resolved using rule 27 (variable -> identifier .)
  ! reduce/reduce conflict for LT resolved using rule 27 (variable -> identifier .)
  ! reduce/reduce conflict for GT resolved using rule 27 (variable -> identifier .)
  ! reduce/reduce conflict for LTE resolved using rule 27 (variable -> identifier .)
  ! reduce/reduce conflict for GTE resolved using rule 27 (variable -> identifier .)
  ! reduce/reduce conflict for EQUALITY resolved using rule 27 (variable -> identifier .)
  ! reduce/reduce conflict for INEQUALITY resolved using rule 27 (variable -> identifier .)
  ! reduce/reduce conflict for SEMI_COLON resolved using rule 27 (variable -> identifier .)
  ! reduce/reduce conflict for $end resolved using rule 27 (variable -> identifier .)
  ! reduce/reduce conflict for RBRACE resolved using rule 27 (variable -> identifier .)
  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for PRIVATE_ID resolved as shift
  ! shift/reduce conflict for GLOBAL_ID resolved as shift
  ! shift/reduce conflict for TIMES resolved as shift
  ! shift/reduce conflict for DIVIDE resolved as shift
  ! shift/reduce conflict for MOD resolved as shift
  ! shift/reduce conflict for POW resolved as shift
  ! shift/reduce conflict for SELECT resolved as shift
  ! shift/reduce conflict for COLON resolved as shift
  ! shift/reduce conflict for AND resolved as shift
  ! shift/reduce conflict for OR resolved as shift
  ! shift/reduce conflict for LT resolved as shift
  ! shift/reduce conflict for GT resolved as shift
  ! shift/reduce conflict for LTE resolved as shift
  ! shift/reduce conflict for GTE resolved as shift
  ! shift/reduce conflict for EQUALITY resolved as shift
  ! shift/reduce conflict for INEQUALITY resolved as shift
    EQUAL           shift and go to state 53
    SEMI_COLON      reduce using rule 27 (variable -> identifier .)
    $end            reduce using rule 27 (variable -> identifier .)
    RBRACE          reduce using rule 27 (variable -> identifier .)
    LBRACE          shift and go to state 18
    LPAREN          shift and go to state 19
    NUMBER_REAL     shift and go to state 21
    NUMBER_EXP      shift and go to state 22
    NUMBER_HEX      shift and go to state 23
    PLUS            shift and go to state 24
    MINUS           shift and go to state 25
    STRING_SINGLE   shift and go to state 26
    STRING_DOUBLE   shift and go to state 27
    LSPAREN         shift and go to state 28
    PRIVATE_ID      shift and go to state 11
    GLOBAL_ID       shift and go to state 12
    TIMES           shift and go to state 30
    DIVIDE          shift and go to state 31
    MOD             shift and go to state 32
    POW             shift and go to state 33
    SELECT          shift and go to state 34
    COLON           shift and go to state 35
    AND             shift and go to state 37
    OR              shift and go to state 38
    LT              shift and go to state 40
    GT              shift and go to state 41
    LTE             shift and go to state 42
    GTE             shift and go to state 43
    EQUALITY        shift and go to state 44
    INEQUALITY      shift and go to state 45

  ! PRIVATE_ID      [ reduce using rule 27 (variable -> identifier .) ]
  ! GLOBAL_ID       [ reduce using rule 27 (variable -> identifier .) ]
  ! PLUS            [ reduce using rule 27 (variable -> identifier .) ]
  ! MINUS           [ reduce using rule 27 (variable -> identifier .) ]
  ! TIMES           [ reduce using rule 27 (variable -> identifier .) ]
  ! DIVIDE          [ reduce using rule 27 (variable -> identifier .) ]
  ! MOD             [ reduce using rule 27 (variable -> identifier .) ]
  ! POW             [ reduce using rule 27 (variable -> identifier .) ]
  ! SELECT          [ reduce using rule 27 (variable -> identifier .) ]
  ! COLON           [ reduce using rule 27 (variable -> identifier .) ]
  ! AND             [ reduce using rule 27 (variable -> identifier .) ]
  ! OR              [ reduce using rule 27 (variable -> identifier .) ]
  ! LT              [ reduce using rule 27 (variable -> identifier .) ]
  ! GT              [ reduce using rule 27 (variable -> identifier .) ]
  ! LTE             [ reduce using rule 27 (variable -> identifier .) ]
  ! GTE             [ reduce using rule 27 (variable -> identifier .) ]
  ! EQUALITY        [ reduce using rule 27 (variable -> identifier .) ]
  ! INEQUALITY      [ reduce using rule 27 (variable -> identifier .) ]
  ! PRIVATE_ID      [ reduce using rule 28 (operator -> identifier .) ]
  ! GLOBAL_ID       [ reduce using rule 28 (operator -> identifier .) ]
  ! PLUS            [ reduce using rule 28 (operator -> identifier .) ]
  ! MINUS           [ reduce using rule 28 (operator -> identifier .) ]
  ! TIMES           [ reduce using rule 28 (operator -> identifier .) ]
  ! DIVIDE          [ reduce using rule 28 (operator -> identifier .) ]
  ! MOD             [ reduce using rule 28 (operator -> identifier .) ]
  ! POW             [ reduce using rule 28 (operator -> identifier .) ]
  ! SELECT          [ reduce using rule 28 (operator -> identifier .) ]
  ! COLON           [ reduce using rule 28 (operator -> identifier .) ]
  ! AND             [ reduce using rule 28 (operator -> identifier .) ]
  ! OR              [ reduce using rule 28 (operator -> identifier .) ]
  ! LT              [ reduce using rule 28 (operator -> identifier .) ]
  ! GT              [ reduce using rule 28 (operator -> identifier .) ]
  ! LTE             [ reduce using rule 28 (operator -> identifier .) ]
  ! GTE             [ reduce using rule 28 (operator -> identifier .) ]
  ! EQUALITY        [ reduce using rule 28 (operator -> identifier .) ]
  ! INEQUALITY      [ reduce using rule 28 (operator -> identifier .) ]
  ! SEMI_COLON      [ reduce using rule 28 (operator -> identifier .) ]
  ! $end            [ reduce using rule 28 (operator -> identifier .) ]
  ! RBRACE          [ reduce using rule 28 (operator -> identifier .) ]

    identifier                     shift and go to state 52
    primaryexp                     shift and go to state 54
    number                         shift and go to state 13
    unaryexp                       shift and go to state 14
    nularexp                       shift and go to state 15
    variable                       shift and go to state 16
    string                         shift and go to state 17
    array                          shift and go to state 20
    operator                       shift and go to state 8
    punctuation                    shift and go to state 29
    comparisonoperator             shift and go to state 36
    configaccessor                 shift and go to state 39

state 8

    (23) nularexp -> operator .

    PRIVATE_ID      reduce using rule 23 (nularexp -> operator .)
    GLOBAL_ID       reduce using rule 23 (nularexp -> operator .)
    PLUS            reduce using rule 23 (nularexp -> operator .)
    MINUS           reduce using rule 23 (nularexp -> operator .)
    TIMES           reduce using rule 23 (nularexp -> operator .)
    DIVIDE          reduce using rule 23 (nularexp -> operator .)
    MOD             reduce using rule 23 (nularexp -> operator .)
    POW             reduce using rule 23 (nularexp -> operator .)
    SELECT          reduce using rule 23 (nularexp -> operator .)
    COLON           reduce using rule 23 (nularexp -> operator .)
    AND             reduce using rule 23 (nularexp -> operator .)
    OR              reduce using rule 23 (nularexp -> operator .)
    LT              reduce using rule 23 (nularexp -> operator .)
    GT              reduce using rule 23 (nularexp -> operator .)
    LTE             reduce using rule 23 (nularexp -> operator .)
    GTE             reduce using rule 23 (nularexp -> operator .)
    EQUALITY        reduce using rule 23 (nularexp -> operator .)
    INEQUALITY      reduce using rule 23 (nularexp -> operator .)
    SEMI_COLON      reduce using rule 23 (nularexp -> operator .)
    $end            reduce using rule 23 (nularexp -> operator .)
    RBRACE          reduce using rule 23 (nularexp -> operator .)
    RPAREN          reduce using rule 23 (nularexp -> operator .)
    COMMA           reduce using rule 23 (nularexp -> operator .)
    RSPAREN         reduce using rule 23 (nularexp -> operator .)


state 9

    (10) binaryexp -> primaryexp .

    PRIVATE_ID      reduce using rule 10 (binaryexp -> primaryexp .)
    GLOBAL_ID       reduce using rule 10 (binaryexp -> primaryexp .)
    PLUS            reduce using rule 10 (binaryexp -> primaryexp .)
    MINUS           reduce using rule 10 (binaryexp -> primaryexp .)
    TIMES           reduce using rule 10 (binaryexp -> primaryexp .)
    DIVIDE          reduce using rule 10 (binaryexp -> primaryexp .)
    MOD             reduce using rule 10 (binaryexp -> primaryexp .)
    POW             reduce using rule 10 (binaryexp -> primaryexp .)
    SELECT          reduce using rule 10 (binaryexp -> primaryexp .)
    COLON           reduce using rule 10 (binaryexp -> primaryexp .)
    AND             reduce using rule 10 (binaryexp -> primaryexp .)
    OR              reduce using rule 10 (binaryexp -> primaryexp .)
    LT              reduce using rule 10 (binaryexp -> primaryexp .)
    GT              reduce using rule 10 (binaryexp -> primaryexp .)
    LTE             reduce using rule 10 (binaryexp -> primaryexp .)
    GTE             reduce using rule 10 (binaryexp -> primaryexp .)
    EQUALITY        reduce using rule 10 (binaryexp -> primaryexp .)
    INEQUALITY      reduce using rule 10 (binaryexp -> primaryexp .)
    SEMI_COLON      reduce using rule 10 (binaryexp -> primaryexp .)
    $end            reduce using rule 10 (binaryexp -> primaryexp .)
    RBRACE          reduce using rule 10 (binaryexp -> primaryexp .)
    RPAREN          reduce using rule 10 (binaryexp -> primaryexp .)
    COMMA           reduce using rule 10 (binaryexp -> primaryexp .)
    RSPAREN         reduce using rule 10 (binaryexp -> primaryexp .)


state 10

    (8) definition -> PRIVATE . PRIVATE_ID

    PRIVATE_ID      shift and go to state 55


state 11

    (50) identifier -> PRIVATE_ID .

    EQUAL           reduce using rule 50 (identifier -> PRIVATE_ID .)
    LBRACE          reduce using rule 50 (identifier -> PRIVATE_ID .)
    LPAREN          reduce using rule 50 (identifier -> PRIVATE_ID .)
    NUMBER_REAL     reduce using rule 50 (identifier -> PRIVATE_ID .)
    NUMBER_EXP      reduce using rule 50 (identifier -> PRIVATE_ID .)
    NUMBER_HEX      reduce using rule 50 (identifier -> PRIVATE_ID .)
    PLUS            reduce using rule 50 (identifier -> PRIVATE_ID .)
    MINUS           reduce using rule 50 (identifier -> PRIVATE_ID .)
    STRING_SINGLE   reduce using rule 50 (identifier -> PRIVATE_ID .)
    STRING_DOUBLE   reduce using rule 50 (identifier -> PRIVATE_ID .)
    LSPAREN         reduce using rule 50 (identifier -> PRIVATE_ID .)
    PRIVATE_ID      reduce using rule 50 (identifier -> PRIVATE_ID .)
    GLOBAL_ID       reduce using rule 50 (identifier -> PRIVATE_ID .)
    TIMES           reduce using rule 50 (identifier -> PRIVATE_ID .)
    DIVIDE          reduce using rule 50 (identifier -> PRIVATE_ID .)
    MOD             reduce using rule 50 (identifier -> PRIVATE_ID .)
    POW             reduce using rule 50 (identifier -> PRIVATE_ID .)
    SELECT          reduce using rule 50 (identifier -> PRIVATE_ID .)
    COLON           reduce using rule 50 (identifier -> PRIVATE_ID .)
    AND             reduce using rule 50 (identifier -> PRIVATE_ID .)
    OR              reduce using rule 50 (identifier -> PRIVATE_ID .)
    LT              reduce using rule 50 (identifier -> PRIVATE_ID .)
    GT              reduce using rule 50 (identifier -> PRIVATE_ID .)
    LTE             reduce using rule 50 (identifier -> PRIVATE_ID .)
    GTE             reduce using rule 50 (identifier -> PRIVATE_ID .)
    EQUALITY        reduce using rule 50 (identifier -> PRIVATE_ID .)
    INEQUALITY      reduce using rule 50 (identifier -> PRIVATE_ID .)
    SEMI_COLON      reduce using rule 50 (identifier -> PRIVATE_ID .)
    $end            reduce using rule 50 (identifier -> PRIVATE_ID .)
    RBRACE          reduce using rule 50 (identifier -> PRIVATE_ID .)
    RPAREN          reduce using rule 50 (identifier -> PRIVATE_ID .)
    COMMA           reduce using rule 50 (identifier -> PRIVATE_ID .)
    RSPAREN         reduce using rule 50 (identifier -> PRIVATE_ID .)


state 12

    (51) identifier -> GLOBAL_ID .

    EQUAL           reduce using rule 51 (identifier -> GLOBAL_ID .)
    LBRACE          reduce using rule 51 (identifier -> GLOBAL_ID .)
    LPAREN          reduce using rule 51 (identifier -> GLOBAL_ID .)
    NUMBER_REAL     reduce using rule 51 (identifier -> GLOBAL_ID .)
    NUMBER_EXP      reduce using rule 51 (identifier -> GLOBAL_ID .)
    NUMBER_HEX      reduce using rule 51 (identifier -> GLOBAL_ID .)
    PLUS            reduce using rule 51 (identifier -> GLOBAL_ID .)
    MINUS           reduce using rule 51 (identifier -> GLOBAL_ID .)
    STRING_SINGLE   reduce using rule 51 (identifier -> GLOBAL_ID .)
    STRING_DOUBLE   reduce using rule 51 (identifier -> GLOBAL_ID .)
    LSPAREN         reduce using rule 51 (identifier -> GLOBAL_ID .)
    PRIVATE_ID      reduce using rule 51 (identifier -> GLOBAL_ID .)
    GLOBAL_ID       reduce using rule 51 (identifier -> GLOBAL_ID .)
    TIMES           reduce using rule 51 (identifier -> GLOBAL_ID .)
    DIVIDE          reduce using rule 51 (identifier -> GLOBAL_ID .)
    MOD             reduce using rule 51 (identifier -> GLOBAL_ID .)
    POW             reduce using rule 51 (identifier -> GLOBAL_ID .)
    SELECT          reduce using rule 51 (identifier -> GLOBAL_ID .)
    COLON           reduce using rule 51 (identifier -> GLOBAL_ID .)
    AND             reduce using rule 51 (identifier -> GLOBAL_ID .)
    OR              reduce using rule 51 (identifier -> GLOBAL_ID .)
    LT              reduce using rule 51 (identifier -> GLOBAL_ID .)
    GT              reduce using rule 51 (identifier -> GLOBAL_ID .)
    LTE             reduce using rule 51 (identifier -> GLOBAL_ID .)
    GTE             reduce using rule 51 (identifier -> GLOBAL_ID .)
    EQUALITY        reduce using rule 51 (identifier -> GLOBAL_ID .)
    INEQUALITY      reduce using rule 51 (identifier -> GLOBAL_ID .)
    SEMI_COLON      reduce using rule 51 (identifier -> GLOBAL_ID .)
    $end            reduce using rule 51 (identifier -> GLOBAL_ID .)
    RBRACE          reduce using rule 51 (identifier -> GLOBAL_ID .)
    RPAREN          reduce using rule 51 (identifier -> GLOBAL_ID .)
    COMMA           reduce using rule 51 (identifier -> GLOBAL_ID .)
    RSPAREN         reduce using rule 51 (identifier -> GLOBAL_ID .)


state 13

    (11) primaryexp -> number .

    PRIVATE_ID      reduce using rule 11 (primaryexp -> number .)
    GLOBAL_ID       reduce using rule 11 (primaryexp -> number .)
    PLUS            reduce using rule 11 (primaryexp -> number .)
    MINUS           reduce using rule 11 (primaryexp -> number .)
    TIMES           reduce using rule 11 (primaryexp -> number .)
    DIVIDE          reduce using rule 11 (primaryexp -> number .)
    MOD             reduce using rule 11 (primaryexp -> number .)
    POW             reduce using rule 11 (primaryexp -> number .)
    SELECT          reduce using rule 11 (primaryexp -> number .)
    COLON           reduce using rule 11 (primaryexp -> number .)
    AND             reduce using rule 11 (primaryexp -> number .)
    OR              reduce using rule 11 (primaryexp -> number .)
    LT              reduce using rule 11 (primaryexp -> number .)
    GT              reduce using rule 11 (primaryexp -> number .)
    LTE             reduce using rule 11 (primaryexp -> number .)
    GTE             reduce using rule 11 (primaryexp -> number .)
    EQUALITY        reduce using rule 11 (primaryexp -> number .)
    INEQUALITY      reduce using rule 11 (primaryexp -> number .)
    SEMI_COLON      reduce using rule 11 (primaryexp -> number .)
    $end            reduce using rule 11 (primaryexp -> number .)
    RBRACE          reduce using rule 11 (primaryexp -> number .)
    RPAREN          reduce using rule 11 (primaryexp -> number .)
    COMMA           reduce using rule 11 (primaryexp -> number .)
    RSPAREN         reduce using rule 11 (primaryexp -> number .)


state 14

    (12) primaryexp -> unaryexp .

    PRIVATE_ID      reduce using rule 12 (primaryexp -> unaryexp .)
    GLOBAL_ID       reduce using rule 12 (primaryexp -> unaryexp .)
    PLUS            reduce using rule 12 (primaryexp -> unaryexp .)
    MINUS           reduce using rule 12 (primaryexp -> unaryexp .)
    TIMES           reduce using rule 12 (primaryexp -> unaryexp .)
    DIVIDE          reduce using rule 12 (primaryexp -> unaryexp .)
    MOD             reduce using rule 12 (primaryexp -> unaryexp .)
    POW             reduce using rule 12 (primaryexp -> unaryexp .)
    SELECT          reduce using rule 12 (primaryexp -> unaryexp .)
    COLON           reduce using rule 12 (primaryexp -> unaryexp .)
    AND             reduce using rule 12 (primaryexp -> unaryexp .)
    OR              reduce using rule 12 (primaryexp -> unaryexp .)
    LT              reduce using rule 12 (primaryexp -> unaryexp .)
    GT              reduce using rule 12 (primaryexp -> unaryexp .)
    LTE             reduce using rule 12 (primaryexp -> unaryexp .)
    GTE             reduce using rule 12 (primaryexp -> unaryexp .)
    EQUALITY        reduce using rule 12 (primaryexp -> unaryexp .)
    INEQUALITY      reduce using rule 12 (primaryexp -> unaryexp .)
    SEMI_COLON      reduce using rule 12 (primaryexp -> unaryexp .)
    $end            reduce using rule 12 (primaryexp -> unaryexp .)
    RBRACE          reduce using rule 12 (primaryexp -> unaryexp .)
    RPAREN          reduce using rule 12 (primaryexp -> unaryexp .)
    COMMA           reduce using rule 12 (primaryexp -> unaryexp .)
    RSPAREN         reduce using rule 12 (primaryexp -> unaryexp .)


state 15

    (13) primaryexp -> nularexp .

    PRIVATE_ID      reduce using rule 13 (primaryexp -> nularexp .)
    GLOBAL_ID       reduce using rule 13 (primaryexp -> nularexp .)
    PLUS            reduce using rule 13 (primaryexp -> nularexp .)
    MINUS           reduce using rule 13 (primaryexp -> nularexp .)
    TIMES           reduce using rule 13 (primaryexp -> nularexp .)
    DIVIDE          reduce using rule 13 (primaryexp -> nularexp .)
    MOD             reduce using rule 13 (primaryexp -> nularexp .)
    POW             reduce using rule 13 (primaryexp -> nularexp .)
    SELECT          reduce using rule 13 (primaryexp -> nularexp .)
    COLON           reduce using rule 13 (primaryexp -> nularexp .)
    AND             reduce using rule 13 (primaryexp -> nularexp .)
    OR              reduce using rule 13 (primaryexp -> nularexp .)
    LT              reduce using rule 13 (primaryexp -> nularexp .)
    GT              reduce using rule 13 (primaryexp -> nularexp .)
    LTE             reduce using rule 13 (primaryexp -> nularexp .)
    GTE             reduce using rule 13 (primaryexp -> nularexp .)
    EQUALITY        reduce using rule 13 (primaryexp -> nularexp .)
    INEQUALITY      reduce using rule 13 (primaryexp -> nularexp .)
    SEMI_COLON      reduce using rule 13 (primaryexp -> nularexp .)
    $end            reduce using rule 13 (primaryexp -> nularexp .)
    RBRACE          reduce using rule 13 (primaryexp -> nularexp .)
    RPAREN          reduce using rule 13 (primaryexp -> nularexp .)
    COMMA           reduce using rule 13 (primaryexp -> nularexp .)
    RSPAREN         reduce using rule 13 (primaryexp -> nularexp .)


state 16

    (14) primaryexp -> variable .
